--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1970,3 +1970,20 @@ img {
 .social-icon {
   margin-right: 50px; /* Adjust space between icons */
 }
+
+
+
+@keyframes slideInFromRight {
+  from {
+      transform: translateX(100%);
+      opacity: 0;
+  }
+  to {
+      transform: translateX(0);
+      opacity: 1;
+  }
+}
+
+.slide-in-right {
+  animation: slideInFromRight 1s ease-out;
+}
